{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 117,
  "lineage": "58842a31-e83a-3b33-bfa4-3a35624fcbdd",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "eastasia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "joke",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/joke-nic",
            "internal_domain_name_suffix": "u4julflinajubdtri250ujjmmh.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.20",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/joke-pip",
                "subnet_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-eastasia/subnets/jokes-subnet-eastasia"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "name": "joke-nic",
            "private_ip_address": "10.0.1.20",
            "private_ip_addresses": [
              "10.0.1.20"
            ],
            "resource_group_name": "co3404-jokes-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.eastasia_vms",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        },
        {
          "index_key": "rabbitmq",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/rabbitmq-nic",
            "internal_domain_name_suffix": "u4julflinajubdtri250ujjmmh.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.50",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/rabbitmq-pip",
                "subnet_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-eastasia/subnets/jokes-subnet-eastasia"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "name": "rabbitmq-nic",
            "private_ip_address": "10.0.1.50",
            "private_ip_addresses": [
              "10.0.1.50"
            ],
            "resource_group_name": "co3404-jokes-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.eastasia_vms",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "indonesia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "moderate",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/moderate-nic",
            "internal_domain_name_suffix": "zrpe2nidemnubihg22a5kwcxdh.jktx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.40",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/publicIPAddresses/moderate-pip",
                "subnet_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-indonesia/subnets/jokes-subnet-indonesia"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "indonesiacentral",
            "name": "moderate-nic",
            "private_ip_address": "10.1.1.40",
            "private_ip_addresses": [
              "10.1.1.40"
            ],
            "resource_group_name": "co3404-jokes-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.indonesia_vms",
            "azurerm_resource_group.indonesia",
            "azurerm_subnet.indonesia",
            "azurerm_virtual_network.indonesia"
          ]
        },
        {
          "index_key": "submit",
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/submit-nic",
            "internal_domain_name_suffix": "zrpe2nidemnubihg22a5kwcxdh.jktx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.1.1.30",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/publicIPAddresses/submit-pip",
                "subnet_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-indonesia/subnets/jokes-subnet-indonesia"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "indonesiacentral",
            "name": "submit-nic",
            "private_ip_address": "10.1.1.30",
            "private_ip_addresses": [
              "10.1.1.30"
            ],
            "resource_group_name": "co3404-jokes-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.indonesia_vms",
            "azurerm_resource_group.indonesia",
            "azurerm_subnet.indonesia",
            "azurerm_virtual_network.indonesia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/kong-nic",
            "internal_domain_name_suffix": "u4julflinajubdtri250ujjmmh.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.10",
                "private_ip_address_allocation": "Static",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/kong-pip",
                "subnet_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-eastasia/subnets/jokes-subnet-eastasia"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "name": "kong-nic",
            "private_ip_address": "10.0.1.10",
            "private_ip_addresses": [
              "10.0.1.10"
            ],
            "resource_group_name": "co3404-jokes-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.kong",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "eastasia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "joke",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/joke-nic|/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia",
            "network_interface_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/joke-nic",
            "network_security_group_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.eastasia_vms",
            "azurerm_network_security_group.eastasia",
            "azurerm_public_ip.eastasia_vms",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        },
        {
          "index_key": "rabbitmq",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/rabbitmq-nic|/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia",
            "network_interface_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/rabbitmq-nic",
            "network_security_group_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.eastasia_vms",
            "azurerm_network_security_group.eastasia",
            "azurerm_public_ip.eastasia_vms",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "indonesia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "moderate",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/moderate-nic|/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-indonesia",
            "network_interface_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/moderate-nic",
            "network_security_group_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.indonesia_vms",
            "azurerm_network_security_group.indonesia",
            "azurerm_public_ip.indonesia_vms",
            "azurerm_resource_group.indonesia",
            "azurerm_subnet.indonesia",
            "azurerm_virtual_network.indonesia"
          ]
        },
        {
          "index_key": "submit",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/submit-nic|/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-indonesia",
            "network_interface_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkInterfaces/submit-nic",
            "network_security_group_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.indonesia_vms",
            "azurerm_network_security_group.indonesia",
            "azurerm_public_ip.indonesia_vms",
            "azurerm_resource_group.indonesia",
            "azurerm_subnet.indonesia",
            "azurerm_virtual_network.indonesia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/kong-nic|/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia",
            "network_interface_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkInterfaces/kong-nic",
            "network_security_group_id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_interface.kong",
            "azurerm_network_security_group.eastasia",
            "azurerm_public_ip.kong",
            "azurerm_resource_group.eastasia",
            "azurerm_subnet.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "eastasia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-eastasia",
            "location": "eastasia",
            "name": "jokes-nsg-eastasia",
            "resource_group_name": "co3404-jokes-eastasia",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "15672",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRabbitMQMgmt",
                "priority": 1006,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000-5672",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowServicePorts",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVNetInbound",
                "priority": 1004,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "indonesia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/networkSecurityGroups/jokes-nsg-indonesia",
            "location": "indonesiacentral",
            "name": "jokes-nsg-indonesia",
            "resource_group_name": "co3404-jokes-indonesia",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "15672",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRabbitMQMgmt",
                "priority": 1006,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3000-5672",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowServicePorts",
                "priority": 1005,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTPS",
                "priority": 1003,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowVNetInbound",
                "priority": 1004,
                "protocol": "*",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.indonesia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "eastasia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "joke",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/joke-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "40.83.74.64",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "joke-pip",
            "resource_group_name": "co3404-jokes-eastasia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia"
          ]
        },
        {
          "index_key": "rabbitmq",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/rabbitmq-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.24.195.5",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "rabbitmq-pip",
            "resource_group_name": "co3404-jokes-eastasia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "indonesia_vms",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": "moderate",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/publicIPAddresses/moderate-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "48.193.42.232",
            "ip_version": "IPv4",
            "location": "indonesiacentral",
            "name": "moderate-pip",
            "resource_group_name": "co3404-jokes-indonesia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.indonesia"
          ]
        },
        {
          "index_key": "submit",
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/publicIPAddresses/submit-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "70.153.147.116",
            "ip_version": "IPv4",
            "location": "indonesiacentral",
            "name": "submit-pip",
            "resource_group_name": "co3404-jokes-indonesia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.indonesia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "kong",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/publicIPAddresses/kong-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.239.48.46",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "kong-pip",
            "resource_group_name": "co3404-jokes-eastasia",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "eastasia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-eastasia/subnets/jokes-subnet-eastasia",
            "name": "jokes-subnet-eastasia",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "co3404-jokes-eastasia",
            "virtual_network_name": "jokes-vnet-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia",
            "azurerm_virtual_network.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "indonesia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.1.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-indonesia/subnets/jokes-subnet-indonesia",
            "name": "jokes-subnet-indonesia",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "co3404-jokes-indonesia",
            "virtual_network_name": "jokes-vnet-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.indonesia",
            "azurerm_virtual_network.indonesia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "eastasia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "954593a7-6868-4013-8e71-473faa252c67",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-eastasia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-eastasia",
            "location": "eastasia",
            "name": "jokes-vnet-eastasia",
            "resource_group_name": "co3404-jokes-eastasia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.eastasia"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "indonesia",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.1.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "354e5ecc-2303-401b-a0e6-e701f558571f",
            "id": "/subscriptions/e08005f5-750a-4afc-9b45-14073f57a2f2/resourceGroups/co3404-jokes-indonesia/providers/Microsoft.Network/virtualNetworks/jokes-vnet-indonesia",
            "location": "indonesiacentral",
            "name": "jokes-vnet-indonesia",
            "resource_group_name": "co3404-jokes-indonesia"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.indonesia"
          ]
        }
      ]
    }
  ]
}